Complete(?) USAGE.md updates wrt/prerequisites and running.